# ferrous-socks

./: .pre-commit-config.yml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  example.toml  justfile
.github/: CODEOWNERS
.github/workflows/: ci.yml  prek.yml
src/: acl.rs  config.rs  main.rs  proxy.rs  request.rs  socks.rs  stats.rs  stats_socket.rs
