[package]
name = "ferrous-socks"
version = "1.0.8"
authors = ["James Brown <roguelazer@roguelazer.com>"]
edition = "2024"
license = "ISC"
readme = "README.md"
repository = "https://github.com/Roguelazer/ferrous-socks"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1"
clap = { version = "4", features = ["color", "cargo", "derive", "env"] }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
ip_network = { version = "0.4", features = ["serde"] }
parking_lot = "0.12.5"
permit = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28.0", features = ["derive"] }
tap = "1.0.1"
thiserror = "2"
tokio = { version = "1.30", features = ["rt-multi-thread", "net", "time", "macros", "sync", "io-util", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
toml = { version = "1.0", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "chrono", "json", "parking_lot"] }

[dev-dependencies]
hex-literal = "1.1"

[lints.clippy]
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
future_not_send = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
mut_mut = "warn"
nonstandard_macro_braces = "warn"
todo = "warn"
uninlined_format_args = "warn"
